changes in version 1.3.9 (2011-05-22)

- bugfixes and cleanups
- GtEncseq completed, Lua bindings added
- `gt encseq` toolbox added for encoded sequence handling
- `gt suffixerator` and `gt packedindex mkindex` have new option -memlimit
- `gt bed_to_gff3` has new options -o, -gzip, -bzip2 and -force


changes in version 1.3.8 (2011-02-02)

- file suffix of fingerprint tables has been changed from ".gt_bsf" to ".md5"
- file suffix of bioseq index files has been changed from ".gt_bsi" to ".bsi"
- file suffix of bioseq raw files has been changed from ".gt_bsr" to ".bsr"
- the tool `gt filter` has been renamed to `gt select`. The same functionality
  is still available with `gt filter` in order not to break existing scripts
- `gt id_to_md5` has new option -subtargetids


changes in version 1.3.7 (2011-01-28)

- bugfixes and cleanup
- `gt suffixerator` now creates ssp/des/sds tables by default


changes in version 1.3.6 (2011-01-07)

- `gt stat` has new options -addintrons and -cdslengthdistri
- the tool `gt bioseq` has been renamed to `gt seq`
- `gt seq` has new options -o, -gzip, -bzip2 and -force
- `gt stat` has new options -o, -gzip, -bzip2 and -force
- `gt extractfeat` has new option -width
- `gt splitfasta` has new option -width
- `gt sequniq` has new option -width
- `gt fingerprint` has new options -width, -o, -gzip, -bzip2 and -force
- `gt mutate` has new options -width, -o, -gzip, -bzip2 and -force
- `gt shredder` has new options -width, -o, -gzip, -bzip2 and -force
- `gt seqfilter` has new options -width, -o, -gzip, -bzip2 and -force
- `gt seqfilter` has new option -maxseqnum
- new tool `gt seqtransform` added
- `gt cds`, `gt extractfeat` and `gt splicesiteinfo` have new option -usedesc
- new tools `gt md5_to_id` and `gt id_to_md5` added
- `gt gff3` has new option -addids
- `gt stat` has new option -source
- `gt filter` has new option -source


changes in version 1.3.5 (2010-07-12)

- `gt gff3 -tidy` cleans up multi-features with different parents