@@ -5,6 +5,7 @@ changes in version 1.3.9 (2011-05-22)
 - `gt encseq` toolbox added for encoded sequence handling
 - `gt suffixerator` and `gt packedindex mkindex` have new option -memlimit
 - `gt bed_to_gff3` has new options -o, -gzip, -bzip2 and -force
+- `gt gtf_to_gff3` has new options -o, -gzip, -bzip2 and -force
 
 
 changes in version 1.3.8 (2011-02-02)
